# zoekt

./: .gitattributes  .gitignore  .golangci.yaml  .tool-versions  .travis.yml  AGENT.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.dynamic-indexserver  Dockerfile.indexserver  Dockerfile.webserver  README.md  SECURITY.md  TEST_LIST.md  WORKSPACE  all.bash  api.go  api_proto.go  api_proto_test.go  api_test.go  bench.sh  benchmark.sh  bits.go  bits_test.go  bloom.go  bloom_test.go  btree.go  btree_test.go  contentprovider.go  contentprovider_test.go  ctag-overlay.nix  ctags-install-alpine.sh  deps.bzl  docreader.go  download-ctags-installer.sh  eval.go  eval_test.go  flake.nix  fuzz_test.go  (+41 more)
.agents/: setup
cmd/zoekt/: BUILD.bazel  main.go
cmd/zoekt-archive-index/: BUILD.bazel  archive.go  e2e_rank_test.go  e2e_test.go  main.go
cmd/zoekt-archive-index/testdata/: InternalDoer.txt  generate_unit_test.txt  graphql_type_User.txt  r_cody_sourcegraph_url.txt
cmd/zoekt-dynamic-indexserver/: BUILD.bazel  main.go  main_test.go
cmd/zoekt-git-clone/: BUILD.bazel  main.go
cmd/zoekt-git-index/: BUILD.bazel  main.go  main_test.go
cmd/zoekt-index/: BUILD.bazel  main.go
cmd/zoekt-indexserver/: BUILD.bazel  config.go  fetch.go  main.go  mutex.go
cmd/zoekt-merge-index/: BUILD.bazel  main.go  main_test.go  zoekt-merge-small.py
cmd/zoekt-mirror-bitbucket-server/: BUILD.bazel  main.go
cmd/zoekt-mirror-gerrit/: BUILD.bazel  main.go
cmd/zoekt-mirror-github/: BUILD.bazel  main.go
cmd/zoekt-mirror-gitiles/: BUILD.bazel  cgit.go  gitiles.go  main.go
cmd/zoekt-mirror-gitlab/: BUILD.bazel  main.go
cmd/zoekt-repo-index/: BUILD.bazel  main.go
cmd/zoekt-sourcegraph-indexserver/: BUILD.bazel  backoff_test.go  checks.go  cleanup.go  cleanup_test.go  debug.go  default_grpc_service_configuration.json  fetch.go  fetcher.go  index.go  index_integration_test.go  index_mutex.go  index_test.go  main.go  main_test.go  merge.go  merge_test.go  meta.go  meta_test.go  metrics.go  owner.go  owner_test.go  public.go  public_test.go  purge.go  purge_test.go  queue.go  queue_backoff.go  queue_test.go  sg.go  sg_test.go
cmd/zoekt-sourcegraph-indexserver/grpc/protos/: README.md  buf.gen.yaml  buf.yaml
cmd/zoekt-sourcegraph-indexserver/grpc/protos/zoekt/indexserver/v1/: indexserver.pb.go  indexserver.proto  indexserver_grpc.pb.go
cmd/zoekt-sourcegraph-indexserver/grpc/server/: server.go
cmd/zoekt-sourcegraph-indexserver/json_schemas/: CdsConfig.json  EdsLoadBalancingPolicyConfig.json  GrpcLbConfig.json  LeastRequestLocalityLoadBalancingPolicyConfig.json  LoadBalancingConfig.json  LrsLoadBalancingPolicyConfig.json  MethodConfig.json  OutlierDetectionLoadBalancingConfig.json  OverrideHostLoadBalancingPolicyConfig.json  PickFirstConfig.json  PriorityLoadBalancingPolicyConfig.json  RingHashLoadBalancingConfig.json  RlsLoadBalancingPolicyConfig.json  RoundRobinConfig.json  ServiceConfig.json  WeightedRoundRobinLbConfig.json  WeightedTargetLoadBalancingPolicyConfig.json  XdsClusterImplLoadBalancingPolicyConfig.json  XdsClusterManagerLoadBalancingPolicyConfig.json  XdsClusterResolverLoadBalancingPolicyConfig.json  XdsConfig.json  XdsServer.json  XdsWrrLocalityLoadBalancingPolicyConfig.json  update.sh
cmd/zoekt-sourcegraph-indexserver/protos/configuration_service/v1/: configuration.pb.go  configuration.proto  configuration_grpc.pb.go
cmd/zoekt-sourcegraph-indexserver/protos/zoekt/indexserver/v1/: indexserver_grpc.pb.go
cmd/zoekt-sourcegraph-indexserver/wip/: cleanup.go  cleanup_test.go  index.go  index_test.go  main.go  main_test.go  merge.go  merge_test.go  meta.go  meta_test.go  queue.go  queue_test.go  sg.go
cmd/zoekt-test/: BUILD.bazel  main.go
cmd/zoekt-webserver/: BUILD.bazel  main.go  main_linux.go  main_test.go  main_windows.go  mcp.go  mcp_test.go  metrics_nonlinux.go
cmd/zoekt-webserver/grpc/server/: sampling_test.go  server.go  server_test.go
cmd/zoekt-webserver/webserver/: webserver.go
ctags/: BUILD.bazel  json.go  json_test.go  parse.go  parse_test.go  parser.go  parser_bins.go  parser_factory.go  parser_map.go  parser_test.go  symbol_kind.go
debugserver/: BUILD.bazel  debug.go
gitindex/: BUILD.bazel  catfile.go  catfile_bench_test.go  catfile_hardening_test.go  catfile_test.go  clone.go  clone_config.go  clone_test.go  delete_test.go  delta_multibranch_branchset_test.go  delta_multibranch_existing_test.go  delta_multibranch_head_query_test.go  delta_multibranch_safety_stats_test.go  delta_smart_branchset_stats_test.go  filter.go  ignore_test.go  index.go  index_test.go  main_test.go  repocache_test.go  slab.go  slab_test.go  submodule.go  submodule_test.go  tree.go  tree_test.go
grpc/: BUILD.bazel  server.go  server_test.go
grpc/chunk/: chunker.go  chunker_test.go
grpc/defaults/: server.go
grpc/grpcutil/: util.go
grpc/internalerrs/: common.go  common_test.go  logging.go  prometheus.go
grpc/messagesize/: prometheus.go  prometheus_test.go
grpc/propagator/: propagator.go
grpc/protos/: README.md
grpc/protos/zoekt/webserver/v1/: query.pb.go  query.proto  webserver.pb.go  webserver.proto  webserver_grpc.pb.go
grpc/server/: server.go  server_test.go
grpc/testprotos/news/v1/: news.pb.go  news.proto
grpc/v1/: BUILD.bazel  query.pb.go  query.proto  webserver.pb.go  webserver.proto  webserver_grpc.pb.go
ignore/: BUILD.bazel  ignore.go  ignore_test.go
json/: BUILD.bazel  json.go  json_test.go
query/: BUILD.bazel  boost.go  doc.go  marshal.go  marshal_test.go  parse.go  parse_test.go  query.go  query_proto.go  query_proto_test.go  query_test.go  regexp.go  regexp_test.go
rpc/: BUILD.bazel  rpc.go  rpc_test.go
rpc/internal/srv/: BUILD.bazel  srv.go
shards/: BUILD.bazel  aggregate.go  eval.go  eval_test.go  sched.go  sched_test.go  shards.go  shards_test.go  watcher.go  watcher_test.go
stream/: BUILD.bazel  client.go  sender.go  stream.go  stream_test.go
trace/: BUILD.bazel  middleware.go  trace.go
trace/ot/: ot.go
web/: BUILD.bazel  api.go  doc.go  e2e_test.go  server.go  server_test.go  snippets.go  templates.go  trace.go
(+1008 files in other folders)
