load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ctags",
    srcs = ["json.go"],
    importpath = "github.com/sourcegraph/zoekt/ctags",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sourcegraph_go_ctags//:go-ctags"],
)

go_test(
    name = "ctags_test",
    srcs = ["json_test.go"],
    embed = [":ctags"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
