load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "debugserver",
    srcs = [
        "debug.go",
        "expvar.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/debugserver",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_x_net//trace",
    ],
)
