load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitindex",
    srcs = [
        "clone.go",
        "delete.go",
        "filter.go",
        "index.go",
        "repocache.go",
        "submodule.go",
        "tree.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/gitindex",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//build",
        "//ignore",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/filemode",
        "@com_github_go_git_go_git_v5//plumbing/format/config",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_grafana_regexp//:regexp",
    ],
)

go_test(
    name = "gitindex_test",
    srcs = [
        "clone_test.go",
        "delete_test.go",
        "ignore_test.go",
        "index_test.go",
        "repocache_test.go",
        "submodule_test.go",
        "tree_test.go",
    ],
    embed = [":gitindex"],
    deps = [
        "//:zoekt",
        "//build",
        "//ignore",
        "//query",
        "//shards",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_grafana_regexp//:regexp",
    ],
)
