load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = ["server.go"],
    importpath = "github.com/sourcegraph/zoekt/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//grpc/v1:grpc",
        "//query",
        "//stream",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "grpc_test",
    srcs = ["server_test.go"],
    embed = [":grpc"],
    deps = [
        "//:zoekt",
        "//grpc/v1:grpc",
        "//internal/mockSearcher",
        "//query",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)
