load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ignore",
    srcs = ["ignore.go"],
    importpath = "github.com/sourcegraph/zoekt/ignore",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gobwas_glob//:glob"],
)

go_test(
    name = "ignore_test",
    srcs = ["ignore_test.go"],
    embed = [":ignore"],
    deps = ["@com_github_gobwas_glob//:glob"],
)
