load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "json",
    srcs = ["json.go"],
    importpath = "github.com/sourcegraph/zoekt/json",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//query",
    ],
)

go_test(
    name = "json_test",
    srcs = ["json_test.go"],
    deps = [
        ":json",
        "//:zoekt",
        "//internal/mockSearcher",
        "//query",
    ],
)
