load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query",
    srcs = [
        "bits.go",
        "marshal.go",
        "parse.go",
        "query.go",
        "regexp.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/query",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/v1:grpc",
        "@com_github_go_enry_go_enry_v2//:go-enry",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_roaringbitmap_roaring//:roaring",
    ],
)

go_test(
    name = "query_test",
    srcs = [
        "marshal_test.go",
        "parse_test.go",
        "query_test.go",
        "regexp_test.go",
    ],
    embed = [":query"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_roaringbitmap_roaring//:roaring",
    ],
)
