load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpc",
    srcs = ["rpc.go"],
    importpath = "github.com/sourcegraph/zoekt/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//query",
        "//rpc/internal/srv",
        "@com_github_keegancsmith_rpc//:rpc",
    ],
)

go_test(
    name = "rpc_test",
    srcs = ["rpc_test.go"],
    deps = [
        ":rpc",
        "//:zoekt",
        "//internal/mockSearcher",
        "//query",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
