load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "shards",
    srcs = [
        "aggregate.go",
        "eval.go",
        "sched.go",
        "shards.go",
        "watcher.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/shards",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//query",
        "//stream",
        "//trace",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@org_golang_x_sync//semaphore",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "shards_test",
    srcs = [
        "eval_test.go",
        "sched_test.go",
        "shards_test.go",
        "watcher_test.go",
    ],
    embed = [":shards"],
    deps = [
        "//:zoekt",
        "//query",
        "//stream",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_roaringbitmap_roaring//:roaring",
    ],
)
