load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stream",
    srcs = [
        "client.go",
        "stream.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/stream",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//query",
        "//rpc",
    ],
)

go_test(
    name = "stream_test",
    srcs = ["stream_test.go"],
    embed = [":stream"],
    deps = [
        "//:zoekt",
        "//internal/mockSearcher",
        "//query",
        "@com_github_google_go_cmp//cmp",
    ],
)
