load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trace",
    srcs = [
        "opentracing.go",
        "trace.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/trace",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@com_github_opentracing_opentracing_go//log",
        "@org_golang_x_net//trace",
    ],
)
