load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "web",
    srcs = [
        "api.go",
        "server.go",
        "snippets.go",
        "templates.go",
        "trace.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/web",
    visibility = ["//visibility:public"],
    deps = [
        "//:zoekt",
        "//json",
        "//query",
        "//rpc",
        "//stream",
        "//trace",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
    ],
)

go_test(
    name = "web_test",
    srcs = ["e2e_test.go"],
    embed = [":web"],
    deps = [
        "//:zoekt",
        "//query",
        "@com_github_google_go_cmp//cmp",
    ],
)
