load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "zoekt-archive-index_lib",
    srcs = [
        "archive.go",
        "flowrate.go",
        "main.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-archive-index",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//cmd",
        "@com_github_mxk_go_flowrate//flowrate",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "zoekt-archive-index",
    embed = [":zoekt-archive-index_lib"],
    visibility = ["//visibility:public"],
    static = "on",
)

go_test(
    name = "zoekt-archive-index_test",
    srcs = ["e2e_test.go"],
    embed = [":zoekt-archive-index_lib"],
    deps = [
        "//:zoekt",
        "//build",
        "//query",
        "//shards",
    ],
)
