load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "zoekt-dynamic-indexserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-dynamic-indexserver",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "zoekt-dynamic-indexserver",
    embed = [":zoekt-dynamic-indexserver_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "zoekt-dynamic-indexserver_test",
    srcs = ["main_test.go"],
    embed = [":zoekt-dynamic-indexserver_lib"],
)
