load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-git-clone_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-git-clone",
    visibility = ["//visibility:private"],
    deps = ["//gitindex"],
)

go_binary(
    name = "zoekt-git-clone",
    embed = [":zoekt-git-clone_lib"],
    visibility = ["//visibility:public"],
)
