load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-git-index_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-git-index",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//gitindex",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "zoekt-git-index",
    embed = [":zoekt-git-index_lib"],
    visibility = ["//visibility:public"],
)
