load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-index_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-index",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//cmd",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "zoekt-index",
    embed = [":zoekt-index_lib"],
    visibility = ["//visibility:public"],
)
