load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-indexserver_lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-indexserver",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//gitindex",
        "@com_github_fsnotify_fsnotify//:fsnotify",
    ],
)

go_binary(
    name = "zoekt-indexserver",
    embed = [":zoekt-indexserver_lib"],
    visibility = ["//visibility:public"],
)
