load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "zoekt-merge-index_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-merge-index",
    visibility = ["//visibility:private"],
    deps = ["//:zoekt"],
)

go_binary(
    name = "zoekt-merge-index",
    embed = [":zoekt-merge-index_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "zoekt-merge-index_test",
    srcs = ["main_test.go"],
    data = ["//testdata"],
    embed = [":zoekt-merge-index_lib"],
    deps = [
        "//:zoekt",
        "//query",
        "//shards",
    ],
)
