load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-mirror-bitbucket-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-mirror-bitbucket-server",
    visibility = ["//visibility:private"],
    deps = [
        "//gitindex",
        "@com_github_gfleury_go_bitbucket_v1//:go-bitbucket-v1",
    ],
)

go_binary(
    name = "zoekt-mirror-bitbucket-server",
    embed = [":zoekt-mirror-bitbucket-server_lib"],
    visibility = ["//visibility:public"],
)
