load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-mirror-gerrit_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-mirror-gerrit",
    visibility = ["//visibility:private"],
    deps = [
        "//gitindex",
        "@com_github_andygrunwald_go_gerrit//:go-gerrit",
    ],
)

go_binary(
    name = "zoekt-mirror-gerrit",
    embed = [":zoekt-mirror-gerrit_lib"],
    visibility = ["//visibility:public"],
)
