load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-mirror-github_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-mirror-github",
    visibility = ["//visibility:private"],
    deps = [
        "//gitindex",
        "@com_github_google_go_github_v27//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_binary(
    name = "zoekt-mirror-github",
    embed = [":zoekt-mirror-github_lib"],
    visibility = ["//visibility:public"],
)
