load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-mirror-gitiles_lib",
    srcs = [
        "cgit.go",
        "gitiles.go",
        "main.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-mirror-gitiles",
    visibility = ["//visibility:private"],
    deps = [
        "//gitindex",
        "@com_github_grafana_regexp//:regexp",
    ],
)

go_binary(
    name = "zoekt-mirror-gitiles",
    embed = [":zoekt-mirror-gitiles_lib"],
    visibility = ["//visibility:public"],
)
