load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-mirror-gitlab_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-mirror-gitlab",
    visibility = ["//visibility:private"],
    deps = [
        "//gitindex",
        "@com_github_xanzy_go_gitlab//:go-gitlab",
    ],
)

go_binary(
    name = "zoekt-mirror-gitlab",
    embed = [":zoekt-mirror-gitlab_lib"],
    visibility = ["//visibility:public"],
)
