load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-repo-index_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-repo-index",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//gitindex",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_google_slothfs//manifest",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "zoekt-repo-index",
    embed = [":zoekt-repo-index_lib"],
    visibility = ["//visibility:public"],
)
