load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "zoekt-sourcegraph-indexserver_lib",
    srcs = [
        "backoff.go",
        "cleanup.go",
        "debug.go",
        "index.go",
        "index_mutex.go",
        "main.go",
        "merge.go",
        "meta.go",
        "meta_unix.go",
        "meta_windows.go",
        "owner.go",
        "queue.go",
        "sg.go",
    ],
    embedsrcs = ["default_grpc_service_configuration.json"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-sourcegraph-indexserver",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//cmd/zoekt-sourcegraph-indexserver/protos/sourcegraph/zoekt/configuration/v1:configuration",
        "//debugserver",
        "//internal/profiler",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_hashicorp_go_retryablehttp//:go-retryablehttp",
        "@com_github_keegancsmith_tmpfriend//:tmpfriend",
        "@com_github_peterbourgon_ff_v3//ffcli",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_mountinfo//:mountinfo",
        "@in_gopkg_natefinch_lumberjack_v2//:lumberjack_v2",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_x_net//trace",
        "@org_golang_x_sys//unix",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "zoekt-sourcegraph-indexserver",
    embed = [":zoekt-sourcegraph-indexserver_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "zoekt-sourcegraph-indexserver_test",
    srcs = [
        "backoff_test.go",
        "cleanup_test.go",
        "index_test.go",
        "main_test.go",
        "merge_test.go",
        "meta_test.go",
        "owner_test.go",
        "queue_test.go",
        "sg_test.go",
    ],
    data = glob(["json_schemas/**"]) + ["//testdata:testdata"],
    embed = [":zoekt-sourcegraph-indexserver_lib"],
    deps = [
        "//:zoekt",
        "//build",
        "//cmd/zoekt-sourcegraph-indexserver/protos/sourcegraph/zoekt/configuration/v1:configuration",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_log//logtest",
        "@com_github_xeipuuv_gojsonschema//:gojsonschema",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
