load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-test_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-test",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//query",
        "//shards",
    ],
)

go_binary(
    name = "zoekt-test",
    embed = [":zoekt-test_lib"],
    visibility = ["//visibility:public"],
)
