load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt-webserver_lib",
    srcs = [
        "main.go",
        "main_linux.go",
        "main_unix.go",
        "main_unsupported.go",
        "main_windows.go",
    ],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt-webserver",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//build",
        "//debugserver",
        "//grpc",
        "//grpc/v1:grpc",
        "//internal/profiler",
        "//internal/tracer",
        "//query",
        "//shards",
        "//stream",
        "//web",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_shirou_gopsutil_v3//disk",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_mountinfo//:mountinfo",
        "@com_github_uber_jaeger_client_go//:jaeger-client-go",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
        "@org_uber_go_automaxprocs//maxprocs",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_prometheus_procfs//:procfs",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_prometheus_procfs//:procfs",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "zoekt-webserver",
    embed = [":zoekt-webserver_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
