load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zoekt_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/zoekt/cmd/zoekt",
    visibility = ["//visibility:private"],
    deps = [
        "//:zoekt",
        "//query",
        "//shards",
    ],
)

go_binary(
    name = "zoekt",
    embed = [":zoekt_lib"],
    visibility = ["//visibility:public"],
)
